--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     <main>
         <div class="person">
             <section class="about">
-                <h1>About Me <span>Darren Milleza</span></h1>
-                <p>Text</p>
+                <div class="box">
+                    <h1>About Me <span>Darren Milleza</span></h1>
+                    <p>I am currently a UC Davis Coding Bootcamp student.</p>
+                </div>
             </section>
             
             <section class="pfp">
-                <img src="./ready pfp.jpeg">
+                <div>b</div>
             </section>
         </div>
-
+        <hr>   
         <div class="portfolio">
             <aside class="work">
                 <h1>Work</h1>
@@ -47,9 +49,9 @@
             </section>
         </div>
     </main>
-    
+    <hr>
     <footer>
-        <div class="contact-me">Contact Me</div>
+        <p class="contact-me">Contact Me</p>
         <address>
             <p>darrenmilleza@gmail.com</p>
             <p>(555)555-5555</p>
