--- a/index.html
+++ b/index.html
@@ -9,32 +9,35 @@
 <body>
     <header> 
         <nav>
-            <a href="">About Me</a>
-            <a href="">Work</a>
-            <a href="">Contact</a>
+            <a href="#aboutme">About Me</a>
+            <a href="#mywork">Work</a>
+            <a href="#contactme">Contact</a>
+
         </nav>
     </header>
-    
+    <!-- <div class="container"> -->
     <main>
-        <div class="person">
-            <section class="about">
+        <!-- <div class="row"> -->
+        <div class="row">
+            <!-- <div class="card-01"-->
+            <section class="card-01 card11">
                 <div class="box">
-                    <h1>About Me <span>Darren Milleza</span></h1>
+                    <h1>About Me <br><span>Darren Milleza</span></h1>
                     <p>I am currently a UC Davis Coding Bootcamp student.</p>
                 </div>
             </section>
             
-            <section class="pfp">
+            <section class="card-01 card12">
                 <div>b</div>
             </section>
         </div>
         <hr>   
-        <div class="portfolio">
-            <aside class="work">
-                <h1>Work</h1>
+        <div class="row">
+            <aside class="card-02 card21">
+                <h1 id="#mywork">Work</h1>
             </aside>
 
-            <section class="work-container">
+            <section class="card-02 card22">
                 <div card="website website-1">
                     <p>Prework</p>
                 </div>
@@ -50,9 +53,11 @@
         </div>
     </main>
     <hr>
-    <footer>
-        <p class="contact-me">Contact Me</p>
-        <address>
+    <footer class="row">
+        <div class="card-03 card31">
+            <p class="contact-me">Contact Me</p>
+        </div>
+        <address class="card-03 card32">
             <p>darrenmilleza@gmail.com</p>
             <p>(555)555-5555</p>
             <p>eBay</p>
