--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </main>
     <hr>
-    <footer class="row">
+    <footer class="row row-3">
         <div class="card-03 card31">
             <p id="contact-me">Contact Me</p>
         </div>
