--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- <div class="card-01"-->
             <section class="card-01 card11">
                 <div class="box">
-                    <h1>about me <br><span>Darren Milleza</span></h1>
+                    <h1 id="aboutme">about me <br><span>Darren Milleza</span></h1>
                     <p>I am currently a UC Davis Coding Bootcamp student.</p>
                 </div>
             </section>
@@ -34,7 +34,7 @@
         <hr>   
         <div class="row">
             <aside class="card-02 card21">
-                <h1 id="#mywork">Work</h1>
+                <h1 id="mywork">Work</h1>
             </aside>
 
             <section class="card-02 card22">
@@ -55,13 +55,12 @@
     <hr>
     <footer class="row row-3">
         <div class="card-03 card31">
-            <p id="contact-me">Contact Me</p>
+            <h1 id="contactme">Contact Me</h1>
         </div>
         
         <address class="card-03 card32">
             <p>darrenmilleza@gmail.com</p>
             <p>(555)555-5555</p>
-            <p>eBay</p>
         </address>
     </footer>
 </body>
