--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./assets/styles.css">
     <title>D Milleza's Portfolio</title>
 </head>
@@ -18,7 +19,7 @@
     <!-- <div class="container"> -->
     <main>
         <!-- <div class="row"> -->
-        <div class="row">
+        <div class="row row-1">
             <!-- <div class="card-01"-->
             <section class="card-01 card11">
                 <div class="box">
@@ -32,7 +33,7 @@
             </section>
         </div>
         <hr>   
-        <div class="row">
+        <div class="row row-2">
             <aside class="card-02 card21">
                 <h1 id="mywork">Work</h1>
             </aside>
