--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </aside>
 
             <section class="card-02 card22">
-                <a href="https://dmilleza.github.io/prework-study-guide/" class="website website-1">
+                <a href="https://dmilleza.github.io/prework-study-guide/" class="website website-1" alt="picture-of-me">
                     <p>Prework-Study-Guide</p>
                 </a>
                 
-                <a href="https://dmilleza.github.io/refactor-mod1/" class="website website-2">
+                <a href="https://dmilleza.github.io/refactor-mod1/" class="website website-2">ß
                     <p>Refactor</p>
                 </a>
             
